jilles      2005/09/28 22:42:46 UTC	(20050928-2443)
  Log:
  Fix crash on shutdown if a connection with ircd was never established.
  

  Modified:
	trunk/src/atheme.c (File Modified) 


nenolod     2005/09/28 21:45:50 UTC	(20050928-2441)
  Log:
  - fix a bug in test.method (echoserver.)
  

  Modified:
	trunk/modules/xmlrpc/main.c (File Modified) 


nenolod     2005/09/28 18:25:05 UTC	(20050928-2439)
  Log:
  - Enable $Id$ stuff on xmlrpc.c, base64.c.
  - Fix echoserver method.
  - Add atheme.register_account (which works), and atheme.verify_account (/ns verify equivilant, not implemented yet.)
  

  Modified:
	trunk/modules/xmlrpc/account.c (File Added) 
	trunk/modules/xmlrpc/main.c (File Modified) 
	trunk/src/base64.c  (Property Modified)
	trunk/src/xmlrpc.c  (Property Modified)


alambert    2005/09/28 06:27:03 UTC	(20050928-2437)
  Log:
  back out 2345...the one time I don't test and I screw it up :-) types don't match, will play tomorrow

  Modified:
	trunk/src/xmlrpc.c (File Modified) 


alambert    2005/09/28 06:21:50 UTC	(20050928-2435)
  Log:
  be sure to encode XMLRPC error reasons -- they're strings, after all

  Modified:
	trunk/src/xmlrpc.c (File Modified) 


nenolod     2005/09/28 06:14:07 UTC	(20050928-2433)
  Log:
  - Finish up the XMLRPC server code.
  - Add a test method, test.method which echos back the first param. (echo server).
  

  Modified:
	trunk/modules/xmlrpc/main.c (File Modified) 
	trunk/src/xmlrpc.c (File Modified) 


nenolod     2005/09/28 06:07:31 UTC	(20050928-2431)
  Log:
  Whoo! :P
  

  Modified:
	trunk/modules/xmlrpc/main.c (File Modified) 
	trunk/src/xmlrpc.c (File Modified) 


nenolod     2005/09/28 05:39:37 UTC	(20050928-2429)
  Log:
  More changes :/
  

  Modified:
	trunk/Makefile.in (File Modified) 
	trunk/configure (File Modified) 
	trunk/configure.ac (File Modified) 
	trunk/modules/xmlrpc/main.c (File Modified) 
	trunk/src/Makefile.in (File Modified) 
	trunk/src/base64.c (File Added) 
	trunk/src/xmlrpc.c (File Added) 